--- a/1.1.LR.regularization.ipynb
+++ b/1.1.LR.regularization.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -147,29 +147,40 @@
     }
    ],
    "source": [
-    "\n",
-    "# C values are reverse regularization; smaller value: higher regularization \n",
-    "regularization = [10, 1, .5, .1]\n",
+    "# C values are reverse regularization; smaller value: higher regularization\n",
+    "regularization = [10, 1, 0.5, 0.1]\n",
     "\n",
     "l1_coefs = []\n",
     "\n",
     "for reg_power in regularization:\n",
-    "    clf = LogisticRegression(penalty='l1', C = reg_power, solver='saga', max_iter=10000, random_state=42) \n",
+    "    clf = LogisticRegression(\n",
+    "        penalty=\"l1\", C=reg_power, solver=\"saga\", max_iter=10000, random_state=42\n",
+    "    )\n",
     "    clf.fit(X, y)\n",
     "    l1_coefs += [np.append(clf.intercept_, clf.coef_)]\n",
     "\n",
     "\n",
     "plt.figure(figsize=(12, 6))\n",
     "\n",
-    "plt.plot(ols_coefs[-1], marker='o', linestyle='--', label=f'OLS ==>{sum([x!=0 for x in ols_coefs[-1][1:]])}')\n",
+    "plt.plot(\n",
+    "    ols_coefs[-1],\n",
+    "    marker=\"o\",\n",
+    "    linestyle=\"--\",\n",
+    "    label=f\"OLS ==>{sum([x!=0 for x in ols_coefs[-1][1:]])}\",\n",
+    ")\n",
     "\n",
     "for i, reg_power in enumerate(regularization):\n",
-    "    non_zero_coef = sum([x!=0 for x in l1_coefs[i][1:]])\n",
-    "    label = f'Lasso (C={reg_power}) ==> {non_zero_coef}'\n",
-    "    plt.plot(l1_coefs[i], marker='o', linestyle='-', label=label)\n",
+    "    non_zero_coef = sum([x != 0 for x in l1_coefs[i][1:]])\n",
+    "    label = f\"Lasso (C={reg_power}) ==> {non_zero_coef}\"\n",
+    "    plt.plot(l1_coefs[i], marker=\"o\", linestyle=\"-\", label=label)\n",
     "\n",
-    "plt.axhline(0, color='black', linestyle='--', linewidth=0.8)\n",
-    "plt.xticks(range(X.shape[1] + 1), ['intercept'] + [f\"{'C' if i<3 else ('X' if i<8 else 'R')}{i+1}\" for i in range(X.shape[1])], rotation=45)\n",
+    "plt.axhline(0, color=\"black\", linestyle=\"--\", linewidth=0.8)\n",
+    "plt.xticks(\n",
+    "    range(X.shape[1] + 1),\n",
+    "    [\"intercept\"]\n",
+    "    + [f\"{'C' if i<3 else ('X' if i<8 else 'R')}{i+1}\" for i in range(X.shape[1])],\n",
+    "    rotation=45,\n",
+    ")\n",
     "plt.ylabel(\"Coefficient Value\")\n",
     "plt.title(\"Comparison of OLS and Lasso Coefficients\")\n",
     "plt.legend()\n",
